force-app/main/default/objects/Lead/fields/Favorite_Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Pokemon__c</fullName>
    <label>Favorite Pokemon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>