force-app/main/default/objects/Lead/fields/Pokemon_Image__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Image__c</fullName>
    <formula>IMAGE(Pokemon_Sprite_URL__c, &quot;Pokemon&quot;, 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pokemon Image</label>
    <type>Text</type>
</CustomField>