force-app/main/default/objects/Lead/fields/Pokemon_Sprite_URL__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Sprite_URL__c</fullName>
    <label>Pokemon Sprite URL</label>
    <type>Url</type>
</CustomField>