force-app/main/default/objects/Lead/fields/Pokemon_Weight__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Weight__c</fullName>
    <label>Pokemon Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>